checkpoint: still broken

--- a/src/sys/CMakeLists.txt
+++ b/src/sys/CMakeLists.txt
@@ -3,3 +3,11 @@ target_sources(youtube PRIVATE
 	tmpfile.c
 	write.c
 )
+
+target_link_libraries(youtube PRIVATE
+	ada
+	curl
+	duktape
+	jansson
+	pcre2-8
+)
