--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -3,3 +3,11 @@ target_sources(youtube PRIVATE
 	re.c
 	url.c
 )
+
+target_link_libraries(youtube PRIVATE
+	ada
+	curl
+	duktape
+	jansson
+	pcre2-8
+)
