--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,14 +18,12 @@ target_include_directories(youtube PUBLIC include)
 
 add_library(youtube-internals) # implementation details, mainly useful for tests
 generate_googlevideo_protoc(youtube-internals)
-target_include_directories(youtube-internals PUBLIC
-	# test-driver uses VideoStreaming__VideoPlaybackAbrRequest structure
-	# and associated unpack() API for testing purposes
-	${googlevideo_BINARY_DIR}
-	# test-driver uses youtube-internals to exercise implementation APIs
-	# like ./src/lib/{js,re}.h and ./src/sandbox/linux/{landlock,seccomp}.h
-	src
-)
+# test-driver uses VideoStreaming__VideoPlaybackAbrRequest structure and
+# associated unpack() API for testing purposes
+target_include_directories(youtube-internals SYSTEM PUBLIC ${googlevideo_BINARY_DIR})
+# test-driver uses youtube-internals to exercise implementation APIs like
+# ./src/lib/{js,re}.h and ./src/sandbox/linux/{landlock,seccomp}.h
+target_include_directories(youtube-internals PUBLIC src)
 add_subdirectory(src)
 
 if (BUILD_TESTING)
