--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -91,7 +91,7 @@ jobs:
         unique-suffix: coverage
     - name: Gather code coverage data
       run: >
-        ./scripts/coverage.sh -E 'main.c|build/|linuxbrew' coverage.profraw ./build/coverage.xml
+        ./scripts/coverage.sh -E main.c coverage.profraw ./build/coverage.xml
         | sed 's@^@    @g' >> "$GITHUB_STEP_SUMMARY"
 
   build-openbsd:
