more diff reduction relative to main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,14 +11,11 @@ adjust_global_includes_and_libraries()
 
 add_executable(youtube-unthrottle)
 target_sources(youtube-unthrottle PUBLIC main.c)
-target_link_libraries(youtube-unthrottle PRIVATE my_cflags)
-target_link_libraries(youtube-unthrottle PRIVATE sanitizers)
-target_link_libraries(youtube-unthrottle PRIVATE youtube)
+target_link_libraries(youtube-unthrottle PRIVATE my_cflags sanitizers youtube)
 
 add_library(youtube)
 target_include_directories(youtube PUBLIC include)
-target_link_libraries(youtube PRIVATE my_cflags)
-target_link_libraries(youtube PRIVATE youtube-internals)
+target_link_libraries(youtube PRIVATE my_cflags youtube-internals)
 
 add_library(youtube-internals INTERFACE)
 # test-driver uses youtube-internals to exercise implementation APIs like
