future-proof clang-format integration
Generalize how the fmt build target finds files to pass to clang-format.
In particular, find C headers and source files in any project directory
other than the default build directory, rather than hardcoding only the
current src, include, and tests subdirectories.

Also, remove the OpenBSD fallback for clang-format-16. At least in
OpenBSD 7.7, this is no longer necessary, now that the clang-tools-extra
package (version 19.1.7) installs /usr/local/bin/clang-format.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,17 +51,10 @@ endif (BUILD_TESTING)
 #
 
 find_program(FORMATTER clang-format)
-if (NOT FORMATTER)
-	# try harder on OpenBSD
-	find_program(FORMATTER clang-format-16 HINTS /usr/local/bin)
-endif (NOT FORMATTER)
 
-add_custom_target(fmt COMMAND find
-	${PROJECT_SOURCE_DIR}/main.c
-	${PROJECT_SOURCE_DIR}/include
-	${PROJECT_SOURCE_DIR}/src
-	${PROJECT_SOURCE_DIR}/tests
-	( -name *.h -or -name *.c )
+add_custom_target(fmt COMMAND
+	find ${PROJECT_SOURCE_DIR}
+	-name *.[ch] ! -path ${PROJECT_SOURCE_DIR}/build/*
 	-exec ${FORMATTER} -Werror --dry-run {} +
 	VERBATIM USES_TERMINAL
 )
