--- a/.inferconfig
+++ b/.inferconfig
@@ -2,7 +2,8 @@
   "compilation-database": ["./build/compile_commands.json"],
   "fail-on-issue": true,
   "results-dir": "./build/infer-out",
-  "skip-analysis-in-path": [ "build/_deps/" ],
-  "disable-issue-type": [ "NULLPTR_DEREFERENCE" ],
-  "liveness": false
+  "skip-analysis-in-path": [
+    "build/_deps/",
+    "build/tests/test_driver.c"
+  ]
 }
