--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -17,17 +17,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest]
         toolchain:
-          - compiler: gcc-14
-            package: gcc@14
-            # gcc-14 (currently) required to workaround failures on gcc-15:
-            #
-            #     {standard input}: Assembler messages:
-            #     {standard input}:1921: Error: unknown pseudo-op: `.base64'
-            #
-            # related upstream issues:
-            #
-            #     https://gcc.gnu.org/bugzilla/show_bug.cgi?id=117342
-            #     https://gcc.gnu.org/bugzilla/show_bug.cgi?id=119657
+          - compiler: gcc-15
+            package: gcc
           - compiler: clang
             package: llvm
     runs-on: ${{ matrix.os }}
