--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -7,6 +7,6 @@ target_sources(youtube PRIVATE
 include(TargetLinkPkgConfig)
 target_link_from_pkg_config(youtube ada)
 target_link_from_pkg_config(youtube libcurl)
-target_link_from_pkg_config(youtube duktape)
 target_link_from_pkg_config(youtube jansson)
 target_link_from_pkg_config(youtube libpcre2-8)
+target_link_from_pkg_config(youtube quickjs)
