--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -10,3 +10,4 @@ target_link_from_pkg_config(youtube libcurl)
 target_link_from_pkg_config(youtube jansson)
 target_link_from_pkg_config(youtube libpcre2-8)
 target_link_from_pkg_config(youtube quickjs)
+target_link_libraries(youtube PRIVATE m) # quickjs implicitly depends on libm
