--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -115,7 +115,7 @@ lint:tcl:
   script:
     - git ls-files -z '*.exp' | xargs -0 tclfmt --in-place --indent=tab --
     - git diff --exit-code '*.exp'
-    - git ls-files -z '*.exp' -print0 | xargs -0 tclint --
+    - git ls-files -z '*.exp' | xargs -0 tclint --
 
 #
 # Run the Clang Static Analyzer via clang-tidy: https://clang-analyzer.llvm.org
