try using debian unstable for gitlab CI, instead of archlinux, to get access to binary package for quickjs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,9 @@ variables:
 
 build:gcc:
   stage: build
+  image: debian:unstable-slim
   before_script:
-    - ./scripts/setup/pacman.sh
+    - ./scripts/setup/apt.sh
   script:
     - cmake --preset default -DCMAKE_COMPILE_WARNING_AS_ERROR=ON
     - cmake --build --preset default
