try to avoid error on DEBIAN_FRONTEND envvar as part of PACKAGE_CMD yaml var

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: debian:unstable-slim
 
 variables:
-  PACKAGE_CMD: "DEBIAN_FRONTEND=noninteractive apt update -qq && apt install -qqy"
+  PACKAGE_CMD: "apt update -qq && apt install -qqy"
   PACKAGE_CMD_ARCHLINUX: "pacman -Sy --needed --noconfirm --noprogressbar"
   TESTS_FAIL_LACK_OF_LANDLOCK_API_IN_CI_RUNNERS: "^(cli-try-sandbox|landlock|sandbox|seccomp)$"
 
